Feat/usual-suspects: Adding red pin to usual-suspect

--- a/src/styles/components/usual-suspects.scss
+++ b/src/styles/components/usual-suspects.scss
@@ -255,6 +255,11 @@
         padding-bottom: 50px;
     }
 
+    .hpp__profile .hpp-multisystemic__tabs::before {
+        background-image: url("/assets/icons/pin.svg");
+        background-size: 58px;
+    }
+
 }
 
 
