--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -35,6 +35,7 @@
 @import './components/_case-file-modal.scss';
 @import './components/stay-connected.scss';
 @import './components/_skeleton.scss';
+@import './components/_usual-supect-modal.scss';
 
 
 .section__home-video {
