Fix Select Bg of Usual Suspects

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3868,7 +3868,7 @@
 
             &--input {
                 width: 100%;
-                background-color: $color-white;
+                background-color: transparent;
                 border: 2px solid $color-red;
                 height: 50px;
                 font-family: 'Special Elite', cursive;
