--- a/src/components/usual-suspects/MobileSelector.astro
+++ b/src/components/usual-suspects/MobileSelector.astro
@@ -1,94 +1,93 @@
 ---
-import AdultTab from "./tabs/AdultTab.astro"
-import ChildrenAdolescent from "./tabs/ChildrenAdolescent.astro"
-import ChildrenTab from "./tabs/ChildrenTab.astro"
+import AdultTab from "./tabs/AdultTab.astro";
+import ChildrenAdolescent from "./tabs/ChildrenAdolescent.astro";
+import ChildrenTab from "./tabs/ChildrenTab.astro";
 ---
 
-<section class="hpp__profile" >
-    <!-- Multisystemic Symptoms and Disease Burden -->
-    <section id="hpp-multisystemic" class="section hpp-multisystemic">
+<section class="hpp__profile">
+  <!-- Multisystemic Symptoms and Disease Burden -->
+  <section id="hpp-multisystemic" class="section hpp-multisystemic">
+    <h2 class="wrapper hpp__profile__title hpp__profile__title--desktop">
+      Common suspects in:
+    </h2>
 
-        <h2 class="wrapper hpp__profile__title hpp__profile__title--desktop">
+    <article class="hpp-multisystemic__tabs">
+      <ul role="tablist" class="hpp-multisystemic__tabs--nav">
+        <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
+          <a
+            href="#usual-suspects_tab1"
+            role="tab"
+            id="tab1"
+            aria-selected="true">Adults</a
+          >
+        </li>
+        <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
+          <a href="#usual-suspects_tab2" role="tab" id="tab2" tabindex="-1"
+            >Children/Adolescents</a
+          >
+        </li>
+        <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
+          <a href="#usual-suspects_tab3" role="tab" id="tab3" tabindex="-1"
+            >Neonates/Infants</a
+          >
+        </li>
+      </ul>
+
+      <div class="wrapper">
+        <h2 class="hpp__profile__title hpp__profile__title--mobile">
           Common suspects in:
         </h2>
 
-        <article class="hpp-multisystemic__tabs">
-
-          <ul role="tablist" class="hpp-multisystemic__tabs--nav">
-            <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
-              <a href="#usual-suspects_tab1" role="tab" id="tab1" aria-selected="true"
-                >Adults</a
-              >
-            </li>
-            <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
-              <a href="#usual-suspects_tab2" role="tab" id="tab2" tabindex="-1"
-                >Children/Adolescents</a
-              >
-            </li>
-            <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
-              <a href="#usual-suspects_tab3" role="tab" id="tab3" tabindex="-1"
-                >Neonates/Infants</a
-              >
-            </li>
-          </ul>
-    
-          <div class="wrapper">
-            <h2 class="hpp__profile__title hpp__profile__title--mobile">
-                Common suspects in:
-            </h2>
-    
-            <div class="hpp-multisystemic__select">
-              <select
-                name="hpp-multisystemic-select"
-                id="hpp-multisystemic-select"
-                class="hpp-multisystemic__select--input"
-              >
-                <option value="usual-suspects_tab1">Adults</option>
-                <option value="usual-suspects_tab2">Children/Adolescents</option>
-                <option value="usual-suspects_tab3">Neonates/Infants</option>
-              </select>
-            </div>
-          </div>
-    
-          <!-- Tab adults content -->
-          <section
-            id="usual-suspects_tab1"
-            data-target="usual-suspects_tab1"
-            role="tabpanel"
-            aria-labelledby="tab1"
-            aria-hidden="false"
-            tabindex="-1"
+        <div class="hpp-multisystemic__select">
+          <select
+            name="hpp-multisystemic-select"
+            id="hpp-multisystemic-select"
+            class="hpp-multisystemic__select--input"
           >
-            <AdultTab  />
-        </section>
-        
-        <!-- Tab children content -->
-        <section
-          id="usual-suspects_tab2"
-          data-target="usual-suspects_tab2"
-          role="tabpanel"
-          aria-labelledby="tab2"
-          aria-hidden="true"
-          tabindex="-1"
-          hidden
-        >
-          <ChildrenAdolescent />
-        </section>
-        
-        <!-- Tab neonates/infants content -->
-        <section
-          id="usual-suspects_tab3"
-          data-target="usual-suspects_tab3"
-          role="tabpanel"
-          aria-labelledby="tab3"
-          aria-hidden="true"
-          tabindex="-1"
-          hidden
-        >
-          <ChildrenTab />
-        </section>
+            <option value="usual-suspects_tab1">Adults</option>
+            <option value="usual-suspects_tab2">Children/Adolescents</option>
+            <option value="usual-suspects_tab3">Neonates/Infants</option>
+          </select>
+        </div>
+      </div>
 
-        </article>
+      <!-- Tab adults content -->
+      <section
+        id="usual-suspects_tab1"
+        data-target="usual-suspects_tab1"
+        role="tabpanel"
+        aria-labelledby="tab1"
+        aria-hidden="false"
+        tabindex="-1"
+      >
+        <AdultTab />
       </section>
 
+      <!-- Tab children content -->
+      <section
+        id="usual-suspects_tab2"
+        data-target="usual-suspects_tab2"
+        role="tabpanel"
+        aria-labelledby="tab2"
+        aria-hidden="true"
+        tabindex="-1"
+        hidden
+      >
+        <ChildrenAdolescent />
+      </section>
+
+      <!-- Tab neonates/infants content -->
+      <section
+        id="usual-suspects_tab3"
+        data-target="usual-suspects_tab3"
+        role="tabpanel"
+        aria-labelledby="tab3"
+        aria-hidden="true"
+        tabindex="-1"
+        hidden
+      >
+        <ChildrenTab />
+      </section>
+    </article>
+  </section>
 </section>
