--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3966,3 +3966,344 @@
 }
 
 /* HPP Profile page end */
+
+
+
+/* usual suspect-last 4*/
+.weeding-out{
+    padding-top: 40px;
+    @media screen and (min-width: 650px) {
+        padding-top: 57px;
+    }
+    
+    img{
+        margin: auto;
+        width: 71px;
+        margin-bottom: -123px;
+        position: relative;
+        z-index: 2;
+        @media screen and (min-width: 507px) {
+            margin-bottom: -60px;
+        }
+        @media screen and (min-width: 650px) {
+            display: none;
+        }
+        
+    }
+    &__title{
+        color: $color-white;
+        font-family: 'Oswald';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 30px;
+        max-width: 352px;
+        padding-left: 22.94px;
+        margin-bottom: 3rem;
+
+        @media screen and (min-width: 650px) {
+            margin: auto;
+            text-align: center;
+            max-width: 452px;
+            font-size: 36px;
+            line-height: 125%;
+        }
+        @media screen and (min-width: 1500px) {
+            margin-bottom: 3rem;
+        }
+    }
+
+    &__text{
+        background-image: url('/assets/images/weeding-out-card.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        transform: rotate(-2.56deg);
+
+        width: 103%;
+        height: 278.92px;
+        position: relative;
+        padding-top: 36px;
+        margin-top: 64px;   
+        overflow: hidden;
+        
+        @media screen and (min-width: 507px) {
+            width: 77%;
+            margin: auto;
+        }
+        @media screen and (min-width: 650px) {
+            background-image: none;
+            overflow: visible;
+        }
+
+        
+
+        &__paragraph{
+            position: relative;
+            font-family: 'Special Elite';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+            max-width: 308px;
+            z-index: 2;
+            color: $color-black;
+            text-align: center;
+            margin: auto;
+            margin-top: 4rem;
+            transform: rotate(2.44deg);
+            @media screen and (min-width: 650px) {
+                color: white;
+                font-size: 20px;
+                line-height: 150%;
+                /* or 30px */
+             max-width: 561px;
+            }
+            
+            span{
+                color: $color-red;
+                @media screen and (min-width: 650px) {
+                    color: #F8BA5D;
+                }
+            }
+        }
+
+        .modifier{
+            position: absolute;
+            top: 63px;
+            transform: rotate(5deg);
+            
+            @media screen and (min-width: 507px) {
+                transform: rotate(3deg);
+            }
+            @media screen and (min-width: 650px) {
+                transform: rotate(4deg);
+                width: 228vw;
+                left: -289px;
+                top: 103px;
+            }
+        }
+        .modifier2{
+            display: none;
+            @media screen and (min-width: 650px) {
+                display: block;
+                position: absolute;
+                transform: rotate(-2deg);
+                width: 228vw;
+                left: -289px!important;
+                top: 182px !important;
+            }    
+        }
+    }
+}
+
+.persistently{
+    padding-bottom: 55px;
+    &__title{
+        color: $color-white;
+        font-family: 'Oswald';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 30px;
+        max-width: 574px;
+        padding-left: 22.94px;
+        margin-bottom: 3rem;
+        margin-top: 2rem;
+        @media screen and (min-width: 650px) {
+            font-size: 36px;
+            line-height: 125%;
+        /* or 45px */
+        max-width: 645px;
+        margin: auto;
+        margin-top: 0;
+        text-align: center;
+        margin-bottom: 18.21px;
+        }
+
+    }
+    &__text{
+        padding-left: 22.94px;
+        padding-right: 27.93px;
+        font-family: 'Barlow';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
+        /* or 24px */
+        color: $color-white;
+        max-width: 692px;
+        @media screen and (min-width: 650px) {
+            font-size: 18px;
+            line-height: 140%;
+            font-weight: 300;
+            text-align: center;
+            max-width: 815px;
+            margin: auto;
+        }
+        
+        &.modifier{
+            margin-bottom: 2rem;
+            @media screen and (min-width: 650px) {
+                max-width: 610px;
+                margin: auto;
+                margin-bottom: 17.2px;
+                font-weight: 500;
+            }
+        }
+        .br{
+            display: none;
+            @media screen and (min-width: 650px) {
+                display: block;
+            }
+        }
+    }
+}
+
+.usual-levels{
+    padding-left: 22.94px;
+    padding-right: 34px;
+    background-image: url('/assets/images/usual-levels.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    @media screen and (min-width: 686px) {
+        padding-top: 61px;
+    }
+
+    &__title{
+        font-family: 'Oswald';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 125%;
+        /* or 30px */
+        padding-bottom: 1rem;
+        border-bottom: 2px solid black;
+        margin-bottom: 9px;
+        margin-top: 10px;
+        padding-top: 11.85px;
+        @media screen and (min-width: 686px) {
+        font-size: 24px;
+        line-height: 140%;
+        margin: auto;
+        text-align: center;
+        border-top: 2px solid black;
+        max-width: 788px;
+    }
+}
+
+.list-blocks{
+    display: block;
+    position: relative;
+    @media screen and (min-width: 686px) {
+        display: flex;
+        justify-content: space-between;
+        max-width: 788px;
+        margin: auto;
+    }
+    .title-line{
+        display: none;
+        @media screen and (min-width: 686px) {
+        display: block;
+        position: absolute;
+        height: 1.5px;
+        width: 100%;
+        background-color: black;
+        top: 53px;
+        }
+    }
+    /* .title-line2{
+        position: absolute;
+        height: 1.5px;
+        width: 100%;
+        background-color: black;
+        bottom: 0;
+    } */
+    }
+
+    &__list{
+        padding-left: 22.94px;
+        border-bottom: 2px solid black;
+        @media screen and (min-width: 686px) {
+        border-bottom: none;
+        }
+        
+
+        &.modifier2{
+            
+            p,li{
+                color: $color-red;
+            }
+            
+            li{
+                &::marker{
+                    color: $color-red;
+                }
+            }
+        }
+        
+        .title{
+            margin-top: 10px;
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 140%;
+            @media screen and (min-width: 650px) {
+                font-size: 21px;
+                line-height: 140%;
+                margin-bottom: 24.03px;
+                margin-top: 11.45px;
+                
+            }
+        }
+        
+        ul{
+            padding-bottom: 2rem;
+        }
+        li{
+            padding-top: 10px;
+        }
+
+    }
+    .disclaimer{
+        font-family: 'Barlow';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 130%;
+        /* or 18px */
+        margin-top: 10.92px;
+        padding-bottom: 54.13px;
+        @media screen and (min-width: 686px) {
+            margin-top: 39.13px;
+            padding-bottom: 46.27px;
+            text-align: center;
+            font-size: 14px;
+            line-height: 130%;
+        }
+    }
+    
+    .flip{
+        height: 61px;
+        width: 141px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        @media screen and (min-width: 1024px) {
+        width: 394px;
+        height: 170px;
+        }
+    }
+}
+
+.usual-cta{
+    .cta{
+        padding-top: 3rem;
+        @media screen and (min-width: 686px) {
+        padding-top: 65px;
+        }
+    }
+}
+
+/* usual suspect-last 4*/
