--- a/src/styles/settings/_utils.scss
+++ b/src/styles/settings/_utils.scss
@@ -19,6 +19,16 @@ $color-value in $colors {
     .bg-color--#{$color-name} {
         background-color: $color-value;
     }
+
+    .md\:color--#{$color-name} {
+        color: $color-value !important;
+        font-family: inherit;
+        font-size: inherit;
+        font-weight: inherit;
+        font-style: inherit;
+        letter-spacing: inherit;
+        line-height: inherit;
+    }
 }
 
 .sz-500\:color--saffron-mango {
